# QuickBrief

./: .gitignore  pyproject.toml
archi/: app_architecture.py
assets/: app_architecture.py
src/: main.py  processing_img.py  requirements.txt
terraform/dev/: backend.tf  main.tf  variables.tf
tests/: test_extract_text_from_image.py  test_list_blobs_in_order.py  test_process_images.py  test_save_text_to_bucket.py
